k8s/rabbitmq-static-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-static-ingress
  namespace: infrastructure
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /js
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
      - path: /css
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
      - path: /img
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
